"Snap during transform" disabled after using "Move" and editing any value in the "redo last" panel #67315

Closed
opened 2019-07-20 12:58:42 +02:00 by Fran Marz · 6 comments

Blender Version
2.80, 5f140e61c2, 2019-07-19

Short description of error
"Snap during transform" is automatically disabled after performing a Move of an object or mesh element and using the "redo last" panel in any way; with other transforms, as Extrude, Rotate or Resize, this doesn't happen.

Exact steps for others to reproduce the error
Enable Snap During Transform, move any element in the 3D Viewport in Edit or Object Mode, then edit any value inside the "redo last" floating panel that shows after any action is performed or by pressing F9. Snap During Transform will disable automatically.

**Blender Version** 2.80, 5f140e61c28c, 2019-07-19 **Short description of error** "Snap during transform" is automatically disabled after performing a Move of an object or mesh element and using the "redo last" panel in any way; with other transforms, as Extrude, Rotate or Resize, this doesn't happen. **Exact steps for others to reproduce the error** Enable Snap During Transform, move any element in the 3D Viewport in Edit or Object Mode, then edit any value inside the "redo last" floating panel that shows after any action is performed or by pressing F9. Snap During Transform will disable automatically.
Author

Added subscriber: @franMarz

Added subscriber: @franMarz
Fran Marz changed title from "Snap during transform" disabled when editing any value with thea "redo last" to "Snap during transform" disables after editing any value in the "redo last" panel 2019-07-20 13:08:12 +02:00
Fran Marz changed title from "Snap during transform" disables after editing any value in the "redo last" panel to "Snap during transform" disabled after editing any value in the "redo last" panel 2019-07-20 13:14:57 +02:00
Fran Marz changed title from "Snap during transform" disabled after editing any value in the "redo last" panel to "Snap during transform" disabled after using "Move" and editing any value in the "redo last" panel 2019-07-20 14:54:27 +02:00

Added subscriber: @zeauro

Added subscriber: @zeauro

What do you mean ? Enabling snap during a transform is done by holding Ctrl key.
Simple fact to stop to hold the key is disabling snap.

Snapping is not an option available for Redo panel. All you can do in redo panel is changing numerical values. Redo panel action don't ignore changes made until they correspond to another snapping target.

Can you precise more what you are doing (how do you enable snapping) and what should happen according to you ?

What do you mean ? Enabling snap during a transform is done by holding Ctrl key. Simple fact to stop to hold the key is disabling snap. Snapping is not an option available for Redo panel. All you can do in redo panel is changing numerical values. Redo panel action don't ignore changes made until they correspond to another snapping target. Can you precise more what you are doing (how do you enable snapping) and what should happen according to you ?
Author

In #67315#728492, @zeauro wrote:
What do you mean ? Enabling snap during a transform is done by holding Ctrl key.
Simple fact to stop to hold the key is disabling snap.

Snapping is not an option available for Redo panel. All you can do in redo panel is changing numerical values. Redo panel action don't ignore changes made until they correspond to another snapping target.

Can you precise more what you are doing (how do you enable snapping) and what should happen according to you ?

In case you didn't notice, Snap can be set as enabled permanently in the Header with the magnet button, something really useful when using Increment as Snapping mode, for instance. When the Snap auto-disables without reason it's a workflow breaker, it's a bug.

> In #67315#728492, @zeauro wrote: > What do you mean ? Enabling snap during a transform is done by holding Ctrl key. > Simple fact to stop to hold the key is disabling snap. > > Snapping is not an option available for Redo panel. All you can do in redo panel is changing numerical values. Redo panel action don't ignore changes made until they correspond to another snapping target. > > Can you precise more what you are doing (how do you enable snapping) and what should happen according to you ? In case you didn't notice, Snap can be set as enabled permanently in the Header with the magnet button, something really useful when using Increment as Snapping mode, for instance. When the Snap auto-disables without reason it's a workflow breaker, it's a bug.
Germano Cavalcante self-assigned this 2019-07-20 16:58:46 +02:00

This issue was referenced by 53944e2f9f

This issue was referenced by 53944e2f9ff7de07211063e5a4f9ac05a1e84ce2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67315
No description provided.