Fix T67315: Redo transform disables snap